@@ -3,4 +3,6 @@ package com.lorepo.icplayer.client.module.sourcelist;
 public interface IViewListener {
 
 	public void onItemCliked(String id);
+
+	public void onItemDragged(String id);
 }
