@@ -3,6 +3,7 @@ package com.lorepo.icplayer.client.module.imagesource.mockup;
 import com.google.gwt.dom.client.Element;
 import com.lorepo.icplayer.client.module.imagesource.IViewListener;
 import com.lorepo.icplayer.client.module.imagesource.ImageSourceModule;
+import com.lorepo.icplayer.client.module.imagesource.ImageSourcePresenter;
 import com.lorepo.icplayer.client.module.imagesource.ImageSourcePresenter.IDisplay;
 
 public class ImageSourceViewMockup implements IDisplay {
@@ -64,5 +65,11 @@ public class ImageSourceViewMockup implements IDisplay {
 	@Override
 	public void hide() {
 		isVisible = false;
+	}
+
+	@Override
+	public void makeDraggable(ImageSourcePresenter imageSourcePresenter) {
+		// TODO Auto-generated method stub
+		
 	}
 }
