@@ -1,3 +1,4 @@
+2015-05-20 Fixed issue with dragging to filled gaps Text and ImageGap modules
 2015-05-19 Fixed issue with fire PageLoaded events from previous pages
 2015-05-19 Added handling HideAnswers event in Show Answers module
 2015-05-19 Fixed handling HideAnswers events in Choice and True/False modules
